@@ -1,2 +1,6 @@
-unused-non-trivial-variable/main.cpp:8:5: warning: unused QString [-Wclazy-unused-non-trivial-variable]
-unused-non-trivial-variable/main.cpp:9:5: warning: unused QString [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:16:5: warning: unused QString [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:17:5: warning: unused QString [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:49:5: warning: unused QList<int> [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:50:5: warning: unused QVector<int> [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:51:5: warning: unused QByteArray [-Wclazy-unused-non-trivial-variable]
+unused-non-trivial-variable/main.cpp:52:5: warning: unused QRect [-Wclazy-unused-non-trivial-variable]
